click also clears error

--- a/lists/static/tests/tests.html
+++ b/lists/static/tests/tests.html
@@ -32,6 +32,12 @@ QUnit.test("errors aren't hidden if there is no keypress", function (assert) {
   assert.equal($('.has-error').is(':visible'), true);
 });
 
+QUnit.test("errors should be hidden onclich as well", function (assert) {
+  window.Superlists.initialize();
+  $('input[name="text"]').trigger('click');
+  assert.equal($('.has-error').is(':visible'), false);
+});
+
   </script>
 </body>
 </html>
